added login form

--- a/index.html
+++ b/index.html
@@ -19,8 +19,19 @@
       <div class="col-8">
         <!--card that holds login portal-->
           <div class="card signin-card">
-              <div class="card-body">
-                This is some text within a card body.
+              <!--body of card-->
+              <div class="card-block">
+                <!--img-->
+                <img src="assets/lightning-logo.png" class="img-fluid signin-img">
+                <!--sign in form-->
+                <form class="signin-form">
+                    <div class="form-group">
+                      <input type="email" class="form-control" id="emailInput" placeholder="Email">
+                    </div>
+                    <div class="form-group">
+                      <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+                    </div>
+                  </form>
               </div>
             </div>
       </div>
