--- a/index.html
+++ b/index.html
@@ -18,22 +18,32 @@
       <div class="col"></div>
       <div class="col-8">
         <!--card that holds login portal-->
-          <div class="card signin-card">
-              <!--body of card-->
-              <div class="card-block">
-                <!--img-->
-                <img src="assets/lightning-logo.png" class="img-fluid signin-img">
-                <!--sign in form-->
-                <form class="signin-form">
-                    <div class="form-group">
-                      <input type="email" class="form-control" id="emailInput" placeholder="Email">
-                    </div>
-                    <div class="form-group">
-                      <input type="password" class="form-control" id="passwordInput" placeholder="Password">
-                    </div>
-                  </form>
+        <div class="card signin-card">
+          <!--body of card-->
+          <div class="card-block">
+          <!--img-->
+          <img src="assets/lightning-logo.png" class="img-fluid signin-img">
+          <!--sign in form-->
+          <form class="signin-form">
+              <div class="form-group">
+                <input type="email" class="form-control" id="emailInput" placeholder="Email">
               </div>
-            </div>
+              <div class="form-group">
+                <input type="password" class="form-control" id="passwordInput" placeholder="Password">
+              </div>
+              <!--button-->
+              <button type="button" class="btn signin-btn btn-lg">Sign In</button>
+              <!--checkbox-->
+              <div class="form-check">
+                  <label class="form-check-label">
+                      <input class="form-check-input" type="checkbox"> Remember Me 
+                      <a href="">Need Help!</a>
+                  </label>
+                </div>
+            </form>
+          </div>
+        </div>
+        <a href="" class="create-new-account">Create New Account</a>
       </div>
       <div class="col"></div>
     </div>
