improved mobile compatability

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <div class="container signin-container">
     <div class="row">
       <div class="col"></div>
-      <div class="col-8">
+      <div class="col-sm-12 col-md-8">
         <!--card that holds login portal-->
         <div class="card signin-card">
           <!--body of card-->
